--- a/hosted/styles.css
+++ b/hosted/styles.css
@@ -7,12 +7,11 @@
    }
    
    canvas {
-     width: 100%;
-     height: 100%;
+     width: 100%; /* Do not remove */
+     height: 100%;  /* Do not remove */
      border: 1px solid #f2f2f2;
      box-shadow: 2px 2px 1px #f2f2f2;
      float: left;
-     background-image: url("http://img06.deviantart.net/49d3/i/2010/245/0/c/pinboard_texture_by_nikky81-d2xuip9.png");
      position: relative;
      z-index: 0;
    }
