--- a/hosted/styles.css
+++ b/hosted/styles.css
@@ -144,3 +144,48 @@
      text-align: center;
      font-size: 50px;
    }
+
+/* Popup container */
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+    display: none;
+    width: 290px;
+    height: 55px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    left: -290px;
+    top: 25px;
+    z-index: 50;
+    bottom: 125%;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: -15%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent transparent #555 transparent;
+}
+
+/* Hide and show the popup */
+.popup .show {
+    display: inline-block;
+}
