--- a/hosted/styles.css
+++ b/hosted/styles.css
@@ -15,6 +15,88 @@
      position: relative;
      z-index: 0;
    }
+
+.clearfix1, .clearfix2, .clearfix3 {
+  overflow: auto;
+  display: none;
+}
+.topics {
+  display: none;
+  align-content: center;
+  text-align: center;
+  margin: 0 auto;
+}
+#topicsh1{
+margin-bottom: 30px;
+}
+
+#topic1, #topic2, #topic3{
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  position: relative;
+  cursor: pointer;
+  z-index: 10
+}
+#topic1:hover, #topic2:hover, #topic3:hover{
+ background-color: aliceblue;
+}
+
+#t1, #t2, #t3 {
+  display: inline-block;
+}
+
+#topicsName1, #topicsName2, #topicsName3 {
+   vertical-align: middle;
+  margin: 55px 0 0 0;
+}
+#showSettings1, #showSettings2, #showSettings3 {
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  font-size: 25px;
+  z-index: 100;
+  padding-top: 5px;
+  float: right;
+}
+
+#wrapper {
+  width: 430px;
+  height: 240px;
+  margin-top: 10px;
+  align-content: center;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+#delete1, #delete2, #delete3 {
+  cursor: pointer;
+  height: 25px;
+  width: 25px;
+  font-size: 25px;
+  position: absolute;
+  top: 160px;
+  left:10px;
+
+}
+
+.settings1, .settings2, .settings3 {
+  width: 200px;
+  height: 200px;
+  display: none;
+  float: right;
+  position: relative;
+}
+#inputTopic1 {
+  display: none;
+}
+
+.panel-body {
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+    vertical-align: middle;
+
+}
    
    #sideBarButton {
      width: 45px;
