--- a/hosted/styles.css
+++ b/hosted/styles.css
@@ -34,8 +34,8 @@ margin-bottom: 30px;
   width: 100px;
   height: 100px;
   border-style: solid;
-  position: relative;
-  display: none;
+  position: absolute;
+  z-index: -1;
   pointer-events: none;
 }
 #comment {
@@ -46,6 +46,7 @@ margin-bottom: 30px;
 }
 #tempTextField {
   position: relative;
+  z-index: 2;
   width: 100px;
   height: 100px;
   display: none;
@@ -157,7 +158,7 @@ margin-bottom: 30px;
    }
    
    .sideBar {
-     z-index: 2;
+     z-index: 100;
      width: 200px;
      height: 500px;
      background-color: #fff2e6;
@@ -205,15 +206,17 @@ margin-bottom: 30px;
      cursor: pointer;
    }
    
-   .sideBar>#toggle>#textFieldH2 {
+   /*.sideBar>#toggle>#textFieldH2 {
      left: 20px;
      top: 120px;
      font-size: 20px;
      position: absolute;
-   }
+   }*/
    
    .sideBar>#toggle>#textField {
      font-size: 14px;
+     width: 160px;
+     height: 50px;
      top: 180px;
      left: 20px;
      border: 1px solid #262626;
@@ -221,7 +224,13 @@ margin-bottom: 30px;
      cursor: pointer;
      resize: none;
      overflow: hidden;
+     border-radius: 2px;
    }
+
+  .sideBar>#toggle>#textField:hover {
+    box-shadow: 0px 0px 5px #262626;
+  }
+
    
    p {
      margin-left: 12px;
