--- a/hosted/styles.css
+++ b/hosted/styles.css
@@ -172,6 +172,13 @@ margin-bottom: 30px;
      font-size: 20px;
      position: absolute;
    }
+
+  .sideBar>#toggle>#textH2 {
+     left: 20px;
+     top: 100px;
+     font-size: 20px;
+     position: absolute;
+   }
    
    .sideBar>#toggle>#stickyNote1 {
      width: 40px;
@@ -205,7 +212,59 @@ margin-bottom: 30px;
      position: absolute;
      cursor: pointer;
    }
+
+  .sideBar>#toggle>.textColor {
+     width: 40px;
+     height: 40px;
+     box-shadow: 1px 1px 2px #262626;
+     position: absolute;
+     cursor: pointer;
+   }
+
+  .sideBar>#toggle>#textColor1 {
+     top: 160px;
+     left: 20px;
+  }
+
+  .sideBar>#toggle>#textColor2 {
+     top: 160px;
+     left: 75px;
+  }
+
+  .sideBar>#toggle>#textColor3 {
+     top: 160px;
+     left: 130px;
+  }
+
+  .sideBar>#toggle>#textColor4 {
+     top: 210px;
+     left: 20px;
+  }
+
+  .sideBar>#toggle>#textColor5 {
+     top: 210px;
+     left: 75px;
+  }
+
+  .sideBar>#toggle>#textColor6 {
+     top: 210px;
+     left: 130px;
+  }
+
+  .sideBar>#toggle>#textColor7 {
+     top: 260px;
+     left: 20px;
+  }
    
+  .sideBar>#toggle>#textColor8 {
+     top: 260px;
+     left: 75px;
+  }
+
+  .sideBar>#toggle>#textColor9 {
+     top: 260px;
+     left: 130px;
+  }
    /*.sideBar>#toggle>#textFieldH2 {
      left: 20px;
      top: 120px;
@@ -217,7 +276,7 @@ margin-bottom: 30px;
      font-size: 14px;
      width: 160px;
      height: 50px;
-     top: 180px;
+     top: 330px;
      left: 20px;
      border: 1px solid #262626;
      position: absolute;
@@ -288,13 +347,13 @@ margin-bottom: 30px;
    }
  #colorDrop {
      padding: 5px 5px 1px 5px;
-     -webkit-column-count: 2;
+     -webkit-column-count: 4;
      -webkit-column-gap: 0;
      -webkit-column-fill: auto;
-     -moz-column-count: 2;
+     -moz-column-count: 4;
      -moz-column-gap: 0;
      -moz-column-fill: auto;
-     column-count: 2;
+     column-count: 4;
      column-gap: 0;
      column-fill: auto;
    }
@@ -303,7 +362,7 @@ margin-bottom: 30px;
      align-content: center;
      text-align: center;
      margin: 0 auto;
-     padding: 0 0 5px 0;
+     padding: 5px 5px 5px 5px;
      vertical-align: middle;
      display: inline-block;
      -webkit-column-break-inside: avoid;
